@@ -30,6 +30,8 @@
 #include <QDebug>
 #include <QVariant>
 
+#define D_VIEW_MODE_ICON 0
+#define D_VIEW_MODE_LIST 1
 #define D_SORT_TYPE_BY_NAME_ASC 1
 #define D_SORT_TYPE_BY_NAME_DSC 2
 #define D_SORT_TYPE_BY_DATE_ASC 3
